--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "license": "UNLICENSED",
     "scripts": {
         "build": "nest build",
+        "db:seed": "prisma migrate reset --force && dotenv -e .env -- ts-node prisma/seed.ts",
         "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --watch",
@@ -21,12 +22,15 @@
     },
     "dependencies": {
         "@nestjs/common": "^9.0.0",
+        "@nestjs/config": "^2.3.1",
         "@nestjs/core": "^9.0.0",
         "@nestjs/platform-express": "^9.0.0",
+        "@prisma/client": "^4.14.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.2.0"
     },
     "devDependencies": {
+        "@faker-js/faker": "^8.0.0",
         "@nestjs/cli": "^9.0.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.0.0",
@@ -36,11 +40,15 @@
         "@types/supertest": "^2.0.11",
         "@typescript-eslint/eslint-plugin": "^5.0.0",
         "@typescript-eslint/parser": "^5.0.0",
+        "dotenv": "^16.0.3",
+        "dotenv-cli": "^7.2.1",
         "eslint": "^8.0.1",
+        "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.3.0",
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "29.5.0",
         "prettier": "^2.8.8",
+        "prisma": "^4.14.0",
         "source-map-support": "^0.5.20",
         "supertest": "^6.1.3",
         "ts-jest": "29.0.5",
