--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
     },
     "dependencies": {
         "@nestjs/common": "^9.0.0",
@@ -34,6 +33,7 @@
     },
     "devDependencies": {
         "@faker-js/faker": "^8.0.0",
+        "@golevelup/ts-jest": "^0.3.7",
         "@nestjs/cli": "^9.0.0",
         "@nestjs/schematics": "^9.0.0",
         "@nestjs/testing": "^9.0.0",
@@ -48,6 +48,7 @@
         "eslint": "^8.0.1",
         "eslint-config-airbnb-base": "^15.0.0",
         "eslint-config-prettier": "^8.3.0",
+        "eslint-plugin-jest": "^27.2.1",
         "eslint-plugin-prettier": "^4.0.0",
         "jest": "29.5.0",
         "prettier": "^2.8.8",
@@ -75,6 +76,11 @@
             "**/*.(t|j)s"
         ],
         "coverageDirectory": "../coverage",
+        "coveragePathIgnorePatterns": [
+            "src/app.module.ts",
+            "src/main.ts",
+            "src/services/prisma.service.ts"
+        ],
         "testEnvironment": "node"
     }
 }
